--- a/package.json
+++ b/package.json
@@ -5,13 +5,25 @@
   "main": "meadowlark.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "hotnode meadowlark"
+    "dev": "nodemon meadowlark",
+    "start": "npm run dev"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
     "express3-handlebars": "^0.5.2",
-    "hotnode": "^0.0.8"
+    "nodemon": "^1.17.3"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "grunt": "^1.0.2",
+    "grunt-cafe-mocha": "^0.1.13",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-exec": "^3.0.0",
+    "jquery": "^3.3.1",
+    "jshint": "^2.9.5",
+    "mocha": "^5.1.1",
+    "zombie": "^6.1.2"
   }
 }
